objects/Ramya_ARM_Objects__c.object
<CustomObject>
    <fields>
        <fullName>AR__c</fullName>
        <label>AR</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Ramya ARM Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ramya ARM Obj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ramya ARM Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>